# lead_vocal_separate_experiment

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
work/: load_show_wav.ipynb
work/src/: show_wave_shape.py
