[tool.poetry]
name = "team_handson"
version = "0.1.0"
description = ""
authors = ["team_handson"]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^0.8"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^4.0"
mypy = "^0.931"
black = "^22.1"
isort = "^5.10"
torch = "1.12.0"
torchaudio = "0.12.0"
matplotlib = "3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
